fix up the order complete screen and make class names more readable

--- a/Menu/index.css
+++ b/Menu/index.css
@@ -1,9 +1,9 @@
-.itemName {
+.item-name {
   text-align: center;
   top: 50%;
 }
 
-.priceText {
+.price-text {
   text-align: center;
 }
 
@@ -13,7 +13,7 @@
   margin-right: 5px;
 }
 
-.menuCards {
+.menu-cards {
   display: block;
   width: 80%;
   margin-left: 10%;
@@ -22,7 +22,7 @@
   border: 1px solid black;
 }
 
-.lunchCards {
+.lunch-cards {
   position: relative;
   display: block;
   width: 80%;
@@ -33,7 +33,7 @@
   border: 1px solid black;
 }
 
-.addToCart {
+.add-to-cart {
   display: inline-block;
   margin-left: 50%;
   margin-bottom: 1vh;
@@ -41,7 +41,7 @@
   width: auto;
 }
 
-.buttonColour {
+.button-colour {
   color: #005239;
   background-color: #fdb929;
   border-color: goldenrod;
@@ -55,11 +55,11 @@
   text-align: center;
 }
 
-.checkoutItem {
+.checkout-item {
  padding-right: 30%;
 }
 
-.addItem {
+.add-item {
   position: absolute;
   font-size: 0.5rem;
   padding: 5px;
@@ -69,7 +69,7 @@
   text-align: center;
 }
 
-.removeItem {
+.remove-item {
   position: absolute;
   font-size: 0.5rem;
   padding: 5px;
@@ -79,7 +79,7 @@
   text-align: center;
 }
 
-.itemCount {
+.item-count {
   position: absolute;
   font-size: 1rem;
   right: 1.7rem;
@@ -87,15 +87,24 @@
   transform: translateY(-50%);
 }
 
-.listPrice {
+.list-price {
   position: absolute;
   right: 4rem;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.inlineStyling {
+.inline-styling {
   display: inline-block;
+}
+
+.confirm-item {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  border: 2px solid rgba(0, 0, 0, 0.25);
+  border-radius: inherit;
 }
 
 .mgt5 {
@@ -278,6 +287,7 @@ body {
   width: min(80vw, 320px);
   left: 50%;
   transform: translateX(-50%);
+  margin-top: 5vh;
 }
 
 input::-webkit-outer-spin-button,
